# LMA_utils

./: .gitignore  README.md  Saturation_state.ipynb  Track_U_at_bottom.ipynb  download_files.py  generate_parameters.py  parameters.yaml  run_summary.qmd
Fortran/: Output.qmd
Python/: Pipfile  analyse_marlpde.py  analyses.qmd  generate_parameters.py  generate_qmds.py  generate_qmds_from_directories.py  generate_templates.py  parameters.yaml  pyproject.toml  render_quarto.py  run_quarto.py  run_summary.qmd
Python/analyze_marlpde/: batch_results.py
Python/rendered_files/to_render/: 18_11_2023_16_07_15.md  18_11_2023_18_33_38.md  18_11_2023_21_13_36.md  19_09_2023_19_38_09.md  19_09_2023_19_45_45.md  19_09_2023_22_58_21.md  19_11_2023_08_11_33.md  19_11_2023_14_46_37.md  19_11_2023_17_05_03.md  20_11_2023_07_12_57.md
